# plex-assistant-mcp

./: README.md  pyproject.toml  requirements.txt  test_connection.py
src/plex_assistant_mcp/: __init__.py  main.py  plex_client.py  tools.py
